<resources>
    <string name="app_name">AutoAcuerdate</string>
    <string name="appVersion">1.0.0</string>
    <string name="appAuthor">Luocz</string>
    <string name="settings_menu">Settings</string>
    <string name="contact_menu">Contact</string>
    <string name="about_menu">About</string>
    <string name="car_menu">Car</string>
    <string name="credential_menu">Credential</string>
    <string name="map_menu">Map</string>
    <string name="account_menu">Account</string>
    <string name="color_plate_yellow">AMARILLO</string>
    <string name="color_plate_pink">ROSA</string>
    <string name="color_plate_red">ROJO</string>
    <string name="color_plate_blue">AZUL</string>
    <string name="color_plate_green">VERDE</string>
    <string name="descripcion">El modelo es: %s
        El color de la placa es: %s,
        La placa es: %s y el origen es: $%s </string>
    <string name="model">Modelo: %s</string>
    <string name="failed">Failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>