<?xml version="1.0" encoding="utf-8"?><!--
  ~ /***************************************************************************
  ~ *  Author: Luis Octavio Goméz de la Cruz
  ~ *  Date created: 22/01/23 12:10
  ~ *  File: bottom_nav_menu.xml
  ~ *  Last modified: 21/01/23 2:25
  ~ *  Last change:
  ~ *    Change Name ->
  ~ *    Change Date -> 22/01/23 12:10
  ~ *    Description ->
  ~ *
  ~ ****************************************************************************/
  -->


<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/carListFragment"
        android:icon="@drawable/ic_round_directions_car_24"
        android:title="@string/car_menu" />

    <item
        android:id="@+id/credentialsListFragment"
        android:icon="@drawable/ic_round_credit_card_24"
        android:title="@string/credential_menu" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map_menu" />

    <item
        android:id="@+id/locationFragment"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/locations_menu" />

    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account_menu" />
</menu>