<?xml version="1.0" encoding="utf-8"?><!--
  ~ /***************************************************************************
  ~ *  Author: Luis Octavio Goméz de la Cruz
  ~ *  Date created: 22/01/23 12:10
  ~ *  File: right_nav_user_menu.xml
  ~ *  Last modified: 18/01/23 12:18
  ~ *  Last change:
  ~ *    Change Name ->
  ~ *    Change Date -> 22/01/23 12:10
  ~ *    Description ->
  ~ *
  ~ ****************************************************************************/
  -->

<!--
  ~ /***************************************************************************
  ~ *  Author: Luis Octavio Goméz de la Cruz
  ~ *  Date created: 18/01/23 12:14
  ~ *  File: right_nav_user_menu.xml
  ~ *  Last modified: 18/01/23 12:14
  ~ *  Last change:
  ~ *    Change Name ->
  ~ *    Change Date -> 18/01/23 12:14
  ~ *    Description ->
  ~ *
  ~ ****************************************************************************/
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_setting"
        android:title="@string/settings_menu" />

    <item
        android:id="@+id/navigation_contact"
        android:title="@string/contact_menu" />

    <item
        android:id="@+id/navigation_about"
        android:title="@string/about_menu" />
</menu>